# projet/Node.js/api/openapi.yaml
@@ -541,6 +541,47 @@ paths:
                   $ref: '#/components/schemas/Track'
                 x-content-type: application/json
       x-swagger-router-controller: Artists
+  /artists/{id}/albums:
+    get:
+      tags:
+        - Artists
+      summary: Get albums by artist
+      operationId: artistsIdAlbumsGET
+      parameters:
+        - name: id
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+        - name: limit
+          in: query
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            default: 20
+        - name: offset
+          in: query
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: integer
+            default: 0
+      responses:
+        "200":
+          description: List of albums by artist
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Album'
+                x-content-type: application/json
+      x-swagger-router-controller: Artists
   /tracks/style/{style}:
     get:
       tags:
