# projet/Node.js/controllers/Artists.js
@@ -35,18 +35,50 @@ module.exports.artistsIdGET = function artistsIdGET(req, res, next, id) {
     }
 };
 
-module.exports.artistsIdDELETE = function artistsIdDELETE(req, res, next, id) {
+module.exports.artistsIdTracksGET = function artistsIdTracksGET(req, res, next, id, limit, offset) {
     try {
-        ArtistsService.artistsIdDELETE(id)
+        ArtistsService.artistsIdTracksGET(id, limit, offset)
             .then(function (response) {
                 utils.writeJson(res, response);
             })
             .catch(function (error) {
-                console.error('Error in artistsIdDELETE:', error);
+                console.error('Error in artistsIdTracksGET:', error);
                 utils.writeJson(res, {error: error.message}, error.code || 404);
             });
     } catch (error) {
-        console.error('Unexpected error in artistsIdDELETE:', error);
+        console.error('Unexpected error in artistsIdTracksGET:', error);
+        utils.writeJson(res, {error: 'Internal Server Error'}, 500);
+    }
+};
+
+module.exports.artistsIdAlbumsGET = function artistsIdAlbumsGET(req, res, next, id, limit, offset) {
+    try {
+        ArtistsService.artistsIdAlbumsGET(id, limit, offset)
+            .then(function (response) {
+                utils.writeJson(res, response);
+            })
+            .catch(function (error) {
+                console.error('Error in artistsIdAlbumsGET:', error);
+                utils.writeJson(res, {error: error.message}, error.code || 404);
+            });
+    } catch (error) {
+        console.error('Unexpected error in artistsIdAlbumsGET:', error);
+        utils.writeJson(res, {error: 'Internal Server Error'}, 500);
+    }
+}
+
+module.exports.artistsPOST = function artistsPOST(req, res, next, body) {
+    try {
+        ArtistsService.artistsPOST(body)
+            .then(function (response) {
+                utils.writeJson(res, response, 201);
+            })
+            .catch(function (error) {
+                console.error('Error in artistsPOST:', error);
+                utils.writeJson(res, {error: error.message}, 400);
+            });
+    } catch (error) {
+        console.error('Unexpected error in artistsPOST:', error);
         utils.writeJson(res, {error: 'Internal Server Error'}, 500);
     }
 };
@@ -67,34 +99,18 @@ module.exports.artistsIdPUT = function artistsIdPUT(req, res, next, body, id) {
     }
 };
 
-module.exports.artistsIdTracksGET = function artistsIdTracksGET(req, res, next, id, limit, offset) {
+module.exports.artistsIdDELETE = function artistsIdDELETE(req, res, next, id) {
     try {
-        ArtistsService.artistsIdTracksGET(id, limit, offset)
+        ArtistsService.artistsIdDELETE(id)
             .then(function (response) {
                 utils.writeJson(res, response);
             })
             .catch(function (error) {
-                console.error('Error in artistsIdTracksGET:', error);
+                console.error('Error in artistsIdDELETE:', error);
                 utils.writeJson(res, {error: error.message}, error.code || 404);
             });
     } catch (error) {
-        console.error('Unexpected error in artistsIdTracksGET:', error);
-        utils.writeJson(res, {error: 'Internal Server Error'}, 500);
-    }
-};
-
-module.exports.artistsPOST = function artistsPOST(req, res, next, body) {
-    try {
-        ArtistsService.artistsPOST(body)
-            .then(function (response) {
-                utils.writeJson(res, response, 201);
-            })
-            .catch(function (error) {
-                console.error('Error in artistsPOST:', error);
-                utils.writeJson(res, {error: error.message}, 400);
-            });
-    } catch (error) {
-        console.error('Unexpected error in artistsPOST:', error);
+        console.error('Unexpected error in artistsIdDELETE:', error);
         utils.writeJson(res, {error: 'Internal Server Error'}, 500);
     }
 };
